--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <title>Feira de Profissões 2025</title>
     <style>
         body {
-            background-color: #f4f9ff;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(to bottom, #cce0ff, #f4f9ff);
             margin: 0;
             padding: 0;
             color: #333;
+        }
+
+        nav {
+            background-color: #0066cc;
+            padding: 15px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
         }
 
         .container {
@@ -21,35 +36,21 @@
 
         h1 {
             text-align: center;
-            color: #1a4d8f;
+            color: #003366;
             margin-bottom: 10px;
         }
 
         p {
             text-align: center;
             line-height: 1.6;
+            font-size: 1.1em;
         }
 
         h2 {
-            color: #1a4d8f;
-            border-bottom: 2px solid #dbe8ff;
+            color: #003366;
+            border-bottom: 2px solid #b3d1ff;
             padding-bottom: 5px;
             margin-top: 30px;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-            background-color: #1a4d8f;
-            padding: 6px 12px;
-            border-radius: 5px;
-            margin: 0 5px;
-            display: inline-block;
-            transition: 0.3s;
-        }
-
-        a:hover {
-            background-color: #004080;
         }
 
         ul, ol, dl {
@@ -68,6 +69,7 @@
             box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
             border-radius: 8px;
             overflow: hidden;
+            background: #fff;
         }
 
         th, td {
@@ -77,12 +79,12 @@
         }
 
         th {
-            background-color: #1a4d8f;
+            background-color: #0066cc;
             color: white;
         }
 
         tr:nth-child(even) {
-            background-color: #f1f6ff;
+            background-color: #f2f9ff;
         }
 
         tr:nth-child(odd) {
@@ -93,25 +95,25 @@
             text-align: center;
             padding: 15px;
             margin-top: 30px;
-            background-color: #1a4d8f;
+            background-color: #0066cc;
             color: white;
         }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav>
+        <a href="index.html">Página Principal</a>|
+        <a href="https://guiadoestudante.abril.com.br/" target="_blank">Guia do Estudante</a> |
+        <a href="form.html">Inscrição</a>|
+    </nav>
+
     <div class="container">
         <!-- Título e Introdução -->
         <h1>Feira de Profissões 2025</h1>
         <p>
             A Feira de Profissões 2025 tem como objetivo ajudar estudantes a conhecerem diferentes áreas do mercado de trabalho,
             explorarem possibilidades de carreira e receberem orientação profissional para um futuro de sucesso.
-        </p>
-
-        <!-- Links -->
-        <p style="text-align:center;">
-            <a href="#programacao">Ir para Programação</a>
-            <a href="https://guiadoestudante.abril.com.br/" target="_blank" rel="noopener noreferrer">Guia do Estudante</a>
-            <a href="programa-oficial.pdf" download>Baixar Programa Oficial</a>
         </p>
 
         <!-- Listas -->
